# odoo-test-helper

./: .copier-answers.yml  .gitignore  .isort.cfg  .pre-commit-config.yaml  .ruff.toml  .travis.yml  CHANGES.rst  README.md  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  pre-commit.yml  publish.yml  test.yml
odoo_test_helper/: __init__.py  fake_model_loader.py  whitelist.py
test_addons/test_helper/: __manifest__.py
test_addons/test_helper/models/: __init__.py  test_mixin.py
test_addons/test_helper/tests/: __init__.py  models.py  test_example.py  test_registry.py
test_addons/test_helper_bis/: __manifest__.py
test_addons/test_helper_bis/tests/: models.py  test_registry.py
test_addons/test_helper_extended/: __manifest__.py
test_addons/test_helper_extended/tests/: __init__.py  test_registry.py
tests/edi_account_oca/: __manifest__.py
tests/edi_account_oca/models/: edi.py
tests/edi_endpoint_oca/: __manifest__.py
tests/edi_endpoint_oca/models/: __init__.py  edi.py
tests/edi_oca/: __manifest__.py
tests/edi_oca/models/: edi.py
tests/edi_oca/tests/: fake_models.py  test_registry.py
tests/fake_module/: __manifest__.py
tests/fake_module/models/: __init__.py  fake_model.py
tests/fake_module/tests/: _models.py  test_example.py  test_registry.py
tests/script/: install_requirement
tests/scripts/: install_odoo.py
tests/test_helper/: __manifest__.py
tests/test_helper/models/: test_mixin.py
tests/test_helper/tests/: models.py  test_example.py  test_registry.py
tests/test_helper_bis/: __manifest__.py
tests/test_helper_bis/tests/: test_registry.py
tests/test_helper_extended/: __manifest__.py
tests/test_helper_extended/models/: test_mixin.py
